tests/ui/lazy-type-alias/variance-overflow.stderr
error[E0392]: type parameter `T` is never used
  --> $DIR/variance-overflow.rs:15:14
   |
LL | struct First<T>(Second);
   |              ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error[E0275]: overflow normalizing the type alias `Second`
  --> $DIR/variance-overflow.rs:15:17
   |
LL | struct First<T>(Second);
   |                 ^^^^^^
   |
   = note: in case this is a recursive type alias, consider using a struct, enum, or union instead

error[E0275]: overflow normalizing the type alias `Second`
  --> $DIR/variance-overflow.rs:19:1
   |
LL | type Second = Second; // diverging free alias type
   | ^^^^^^^^^^^
   |
   = note: in case this is a recursive type alias, consider using a struct, enum, or union instead

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0275, E0392.
For more information about an error, try `rustc --explain E0275`.
